--- a/spec/fixtures/vcr_cassettes/BookFacade/_get_books_data.yml
+++ b/spec/fixtures/vcr_cassettes/BookFacade/_get_books_data.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://openlibrary.org/search.json?limit=5&published_in=2010-2022&q=Trenton
+    uri: http://openlibrary.org/search.json?limit=5&published_in=2010-2022&q=Trenton&subject=travel
     body:
       encoding: US-ASCII
       string: ''
@@ -21,7 +21,7 @@ http_interactions:
       Server:
       - nginx/1.18.0 (Ubuntu)
       Date:
-      - Mon, 07 Mar 2022 17:37:48 GMT
+      - Mon, 07 Mar 2022 18:16:27 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -35,7 +35,7 @@ http_interactions:
       Access-Control-Max-Age:
       - '86400'
       X-Ol-Stats:
-      - '"SR 1 0.111 TT 0 0.117"'
+      - '"SR 1 0.122 TT 0 0.125"'
       Referrer-Policy:
       - no-referrer-when-downgrade
     body:
@@ -364,5 +364,5 @@ http_interactions:
             "q": "Trenton",
             "offset": null
         }
-  recorded_at: Mon, 07 Mar 2022 17:37:48 GMT
+  recorded_at: Mon, 07 Mar 2022 18:16:27 GMT
 recorded_with: VCR 6.0.0
