--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -28,6 +28,7 @@ jobs:
       mapquest_api_key: ${{ secrets.MAPQUEST_API_KEY }}
       unsplash_api_key: ${{ secrets.UNSPLASH_API_KEY }}
       weather_api_key: ${{ secrets.WEATHER_API_KEY }}
+      master_key: ${{ secrets.LOCKBOX_MASTER_KEY }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
